--- a/styles.css
+++ b/styles.css
@@ -595,6 +595,17 @@ video {
   display: none;
 }
 
+*, ::before, ::after {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .absolute {
   position: absolute;
 }
@@ -616,9 +627,9 @@ video {
   grid-column: span 2 / span 2;
 }
 
-.mx-\[80px\] {
-  margin-left: 80px;
-  margin-right: 80px;
+.mx-\[70px\] {
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .my-\[30px\] {
@@ -626,9 +637,9 @@ video {
   margin-bottom: 30px;
 }
 
-.mx-\[200px\] {
-  margin-left: 200px;
-  margin-right: 200px;
+.mx-\[180px\] {
+  margin-left: 180px;
+  margin-right: 180px;
 }
 
 .ml-9 {
@@ -756,6 +767,10 @@ video {
   padding-right: 310px;
 }
 
+.text-\[50px\] {
+  font-size: 50px;
+}
+
 .text-\[30px\] {
   font-size: 30px;
 }
@@ -764,15 +779,38 @@ video {
   font-size: 40px;
 }
 
-.text-\[20px\] {
-  font-size: 20px;
+.text-\[18px\] {
+  font-size: 18px;
 }
 
-.text-\[50px\] {
-  font-size: 50px;
+.text-\[28px\] {
+  font-size: 28px;
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.duration-700 {
+  transition-duration: 700ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.hover\:translate-x-36:hover {
+  --tw-translate-x: 9rem;
+  transform: var(--tw-transform);
+}
+
+.hover\:scale-125:hover {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: var(--tw-transform);
 }
