--- a/styles.css
+++ b/styles.css
@@ -690,6 +690,10 @@ video {
   height: auto;
 }
 
+.min-h-\[\] {
+  min-height: ;
+}
+
 .w-screen {
   width: 100vw;
 }
@@ -704,6 +708,14 @@ video {
 
 .w-auto {
   width: auto;
+}
+
+.min-w-\[1450px\] {
+  min-width: 1450px;
+}
+
+.min-w-\[1430px\] {
+  min-width: 1430px;
 }
 
 .grid-cols-2 {
@@ -738,16 +750,16 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .gap-20 {
   gap: 5rem;
 }
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .overflow-visible {
@@ -771,16 +783,16 @@ video {
   font-size: 50px;
 }
 
-.text-\[30px\] {
-  font-size: 30px;
-}
-
 .text-\[40px\] {
   font-size: 40px;
 }
 
 .text-\[18px\] {
   font-size: 18px;
+}
+
+.text-\[30px\] {
+  font-size: 30px;
 }
 
 .text-\[28px\] {
@@ -796,12 +808,12 @@ video {
   transition-duration: 700ms;
 }
 
-.duration-1000 {
-  transition-duration: 1000ms;
-}
-
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
 }
 
 .hover\:translate-x-36:hover {
